# learn-gui-gtk

c-gtk/: Makefile  Makefile.static  README.md  build.sh  build_static.sh  main.c  run.sh  run_static.sh
d-gtk/: README.md  build_gtk4.sh  dub_gtk4.sdl  dub_static.sdl  fix_libraries.sh  generate_gtk4_bindings.sh  gtk4_upgrade_plan.md  rebuild_with_static_linking.sh  run.sh  run_gtk4.sh  run_with_local_libs.sh  setup_gtk_links.sh  test_fixes.sh  完整解決方案.md  最終使用說明.md  解決方案總結.md
d-gtk/bindings/definitions/: gtk4.d
d-gtk/libs/: libatk-1.0.0.dylib  libcairo-gobject.2.dylib  libcairo.2.dylib  libgdk-3.0.dylib  libgdk_pixbuf-2.0.0.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libpango-1.0.0.dylib  libpangocairo-1.0.0.dylib
d-gtk/source/: app.d  app_gtk4.d
go-gtk/: README.md  build.sh  go.mod  go.sum  main.go  run.sh
rust-gtk/: Cargo.toml  README.md  build.sh  run.sh
rust-gtk/src/: main.rs
