[package]
name = "rust-mac-calc-fx"
version = "0.1.0"
edition = "2021"
authors = ["Ed Oo"]
description = "Simple Calculator with live FX (no API key) — Rust + GTK4 — macOS"
license = "MIT"

[dependencies]
gtk4 = "0.9"
glib = "0.20"
gio = "0.20"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
